# briar-api

./: .env  .gitignore  BRIAR_CLI_Walkthrough.md  Dockerfile  GOVERNMENT_USE  LICENSE.md  LICENSE_TEMP  README.md  briar_env.sh  build-proto-docs.sh  build-proto-stubs.sh  doxyfile-main  generate-docs.sh  pyproject.toml  setup.py
doc/: HowToDevelopBriarService.md  Protobuf-Object-Doc.html  api-timing-expectations.md  doxyfile-python-service  readme-python-service.md
doc/scripts/: autodoc_cmds.sh  doxyfile-cmd  markdownify_cmd_text.py  template-cmds-readme.md
lib/python/briar/: __init__.py  __main__.py  briar_cli.py  briar_client.py  briar_media.py  doxyfile-cli  functions.py  grpc_json.py  ibriar.py  media_converters.py  readme-cli.md  requirements.txt  service.py
lib/python/briar/briar_grpc/: __init__.py  briar_error_pb2.pyi  briar_pb2.pyi  briar_service_pb2.pyi
lib/python/briar/cli/: __init__.py  annotate.py  connection.py  database.py  detect.py  enhance.py  enroll.py  extract.py  finalize.py  media.py  search.py  sigset.py  status.py  test.py  track.py  verify.py  viz.py
lib/python/briar/evaluation/: __init__.py  full_evaluation.py  stage1_probe_enroll.py  stage2.1_gallery1_simple_enroll.py  stage2.2_gallery2_simple_enroll.py  stage2.3_gallery1_blended_enroll.py  (+2 more)
proto/briar/briar_grpc/: briar.proto  briar_error.proto  briar_service.proto  doxyfile-protobuf  doxyfile-stubs-cpp  doxyfile-stubs-csharp  doxyfile-stubs-js  doxyfile-stubs-objc  doxyfile-stubs-php  doxyfile-stubs-python  doxyfile-stubs-ruby  protofiles_readme.md  stubs_readme.md
(+50 files in other folders)
